--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,10 @@
     <packaging>pom</packaging>
     <modules>
         <module>config_server</module>
+        <module>eureka_server</module>
+        <module>zuul_server</module>
+        <module>consumer_service</module>
+        <module>provider_service</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
